--- a/src/components/Education/EducationModule.css
+++ b/src/components/Education/EducationModule.css
@@ -7,7 +7,6 @@
 
 .education-container {
   display: flex;
-
   flex-direction: column;
   gap: 20px;
   align-items: center;
@@ -44,9 +43,8 @@
     box-shadow 0.4s ease-in-out;
   transform-origin: bottom;
   position: relative;
-  overflow: hidden;
   cursor: pointer;
-  /* max-height: 250px; */
+  max-height: 250px;
   white-space: normal;
   display: flex;
   flex-direction: column;
@@ -58,11 +56,10 @@
   /* display: -webkit-box;
   -webkit-line-clamp: 4; 
   -webkit-box-orient: vertical; */
-  line-clamp: 4;
+  /* line-clamp: 4; */
   overflow: hidden;
   text-overflow: ellipsis;
   opacity: 0.8;
-
   transform: translateY(5px);
   transition: opacity 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
