--- a/src/components/Projectsfile/ProjectModule.css
+++ b/src/components/Projectsfile/ProjectModule.css
@@ -196,7 +196,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  /* z-index: 1000; */
+  overflow-y: auto;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease-in-out, visibility 0.3s;
@@ -207,6 +208,8 @@
   color: #fff;
   padding: 2rem;
   border-radius: 10px;
+  overflow-y: auto;
+  max-height: 90vh;
   max-width: 600px;
   width: 90%;
   text-align: center;
